--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "devDependencies": {
     "babel-preset-es2015-rollup": "^1.2.0",
     "rollup": "^0.35.11",
-    "rollup-plugin-babel": "^2.6.1"
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.3",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
